Pass MouseUp to the captured scrollbar animation controller in layer tree. This issue is caused by we only pass the MouseUp to the scoll layer currently mouse over. If we capture the scrollbar then move to another scoll layer then the captured scrollbar will lose the MouseUp.

In this patch we save the captured_scrollbar_animation_controller when mouse
down so that we can call the captured_scrollbar_animation_controller MouseUp.

BUG=690052
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2683763004
Cr-Commit-Position: refs/heads/master@{#449986}

Former-commit-id: 7250e1ab8f60d4a7ad8644c11ed0576f2c4f34b1